--- a/html/home.html
+++ b/html/home.html
@@ -260,7 +260,7 @@
         <!-- Order -->
 
         <div class="buy-now">
-            <a href="#" target="_blank" class="btn btn-danger btn-buy-now">1 Barang = Rp. 1000.0000 </a>
+            <a href="keranjang.html" class="btn btn-danger btn-buy-now">1 Barang = Rp. 1000.0000 </a>
         </div>
 
         <!-- / order -->
