--- a/html/keranjang.html
+++ b/html/keranjang.html
@@ -233,7 +233,11 @@
                                     <button type="button" class="btn btn-outline-primary">Uang Pas</button>
                                     <button type="button" class="btn btn-outline-secondary">Rp. 10.000,-</button>
                                 </div>
-
+                                <div class="row mt-5">
+                                    <div class="mb-3 col-12">
+                                        <input type="number" autofocus="true" placeholder="cari transaksi..." class="form-control" id="caritarnsaksi" />
+                                    </div>
+                                </div>
                                 <div class="mt-5">
                                     <button class="btn btn-danger btn-buy-now w-100">PROSES</button>
                                 </div>
