--- a/html/home.html
+++ b/html/home.html
@@ -288,7 +288,7 @@
                             checkoutString += "\n " + this.id + " \t " + this.name + " \t " + this.summary + " \t " + this.price + " \t " + this.quantity + " \t " + this.image;
                         });
                         // alert(checkoutString);
-                        window.location.href = "https://mkurniarmadhan.github.io/HITUNGIN/html/keranjang.html";
+                        window.location.href = "../html/keranjang.html";
                         console.log("checking out", products, totalPrice, totalQuantity);
                     }
                 });
