--- a/html/home.html
+++ b/html/home.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Hitungin TET</title>
+    <title>Hitungin -Home</title>
 
     <meta name="description" content="hitungin - kasir app" />
 
